style/game.css
#mainDiv{
    height: 1000px;
    display: grid;
    grid-template-columns: 10% auto 10%;
}

#contentDiv{
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;
    grid-template-rows: 25% 15% 25% 25%;
    top: 0px;
    width: 1000px;
    height: 100%;
    margin: auto;
    margin-top: 0px;
}

#textDiv{
    grid-column-start: span 3;
    overflow: scroll;
}

.sideDiv{
    background-size: contain;
    background-repeat: repeat-y;
}

.useFullColumn{
    grid-column-start: span 4;
}

.addBorder{
    border: 2px;
    border-style: solid;
}

#score{
    margin-left: 40%;
    background-color: lightgreen;
    width: 20%;
    height: 20%;
    text-align: center;
    border-radius: 5%;
    margin-top: 2%;
}

#carousel{
    display: flex;
    align-items: center;
    position: relative;
}

#carouselImgs{
    display: flex;
    align-items: center;
    height: 100%;
    width: 100%;
}

.slide{
    width: 20%;
    margin: 2.5%;
    float: left;
}

.slide img{
    width: 100%;
}

.prev, .next {
    cursor: pointer;
    position: absolute;
    width: auto;
    padding: 16px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}
  
  
.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}
  
.prev:hover, .next:hover {
    background-color: rgba(0,0,0,0.8);
}
  

